NEXT
- Added the 62 AD Pompeii earthquake
- Added the 115 AD Antioch earthquake

2020-02-02 v1.0 "Pliny the Elder"
- Set the end date to 1522 AUC (769 AD)
- Integrated "A Christianity Mod", credits to Lensy: https://steamcommunity.com/sharedfiles/filedetails/?id=1725257829
- Made republics' elections annual
- Added a decision to divide the Roman Empire into two halves
- Added three late-game inventions
- Replaced vanilla random volcanic eruption events with historical eruptions of Etna in 122 BC and Vesuvius in 79 AD
- Added smaller eruptions of Vesuvius (217 BC, 172 AD, 203 AD, 222 AD, 379 AD, 472 AD, 505 AD, 512 AD, 536 AD, 685 AD, 787 AD). Smaller eruptions' only effect is the volcano eruption animation
- Added smaller eruptions of Etna (141 BC, 135 BC, 126 BC, 61 BC, 56 BC, 49 BC, 44 BC, 36 BC, 32 BC, 10 BC, 10 AD, 39 AD, 80 AD, 252 AD, 417 AD, 644 AD, 812 AD, 814 AD, 859 AD)
- Added an eruption of Ararat (300 AD)
- Added an eruption of Methana (230 BC)
- Added the Rhodes earthquake of 226 BC
- Added the Portugal and Galicia earthquake of 60 BC that caused a tsunami
- Added the 17 AD Lydia earthquake